PROD-4736 Fixed overflow issue for profile social networks fields

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -374,6 +374,10 @@ body.register .buddypress-wrap .page ul {
 	display: none;
 }
 
+.buddypress-wrap .bp-widget.social .bp-tables-user {
+	overflow: visible;
+}
+
 .users-header #item-header-avatar {
 
 	a.link-change-profile-image {
