--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -9236,6 +9236,10 @@ body.register .buddypress-wrap .page ul {
   display: none;
 }
 
+.buddypress-wrap .bp-widget.social .bp-tables-user {
+  overflow: visible;
+}
+
 .users-header #item-header-avatar a.link-change-profile-image {
   top: 71px;
   right: 50%;
